[gd_scene load_steps=2 format=3 uid="uid://1r0wsl251nny"]

[ext_resource type="Script" path="res://Game/MissionManager.gd" id="1_bvvgm"]

[node name="MissionManager" type="Node"]
script = ExtResource("1_bvvgm")

[node name="MissionTimer" type="Timer" parent="."]
one_shot = true

[node name="MissionTimerLabel" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.444444
anchor_top = 0.0123457
anchor_right = 0.556
anchor_bottom = 0.0743457
offset_right = -0.512024
offset_bottom = -0.176003
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
text = "00:00"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="MissionTimer" to="." method="_on_mission_timer_timeout"]
